# E-Panchayath

./: README.md  package-lock.json  package.json
backend/: main.py  pyproject.toml  requirements.txt
backend/app/core/: auth.py  security.py
backend/app/db/: database.py
backend/app/middleware/: cors.py
backend/app/models/: complaint.py  enums.py  user.py  ward.py
backend/app/routers/: admin.py  complaint.py  map.py  user.py
backend/app/schemas/: createComplaint.py  user.py
backend/app/services/: complaint_services.py  user_services.py  ward_services.py
src/: App.js
src/component/: Header.js  Sidebar.js  leaflet.js  osm-provider.js
src/styles/: App.css  Header.css  Sidebar.css  leaflet.css
